<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_guideline_hor"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>

        <TextView
            android:id="@+id/register_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tittle"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/register_guideline_hor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/register_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintRight_toLeftOf="@id/register_guideline"
            app:layout_constraintTop_toBottomOf="@id/register_tittle" />

        <TextView
            android:id="@+id/register_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintRight_toLeftOf="@id/register_guideline"
            app:layout_constraintTop_toBottomOf="@id/register_user_text" />

        <TextView
            android:id="@+id/register_repassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repassword"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintRight_toLeftOf="@id/register_guideline"
            app:layout_constraintTop_toBottomOf="@id/register_password_text" />

        <EditText
            android:id="@+id/register_user_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toRightOf="@id/register_guideline"
            app:layout_constraintBottom_toBottomOf="@id/register_user_text" />

        <EditText
            android:id="@+id/register_password_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="@id/register_password_text"
            app:layout_constraintLeft_toRightOf="@id/register_guideline" />


        <EditText
            android:id="@+id/register_repassword_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            app:layout_constraintLeft_toRightOf="@id/register_guideline"
            app:layout_constraintBottom_toBottomOf="@id/register_repassword_text" />



        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_repassword_edt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>