<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slide_layout"
        android:layout_width="match_parent"
        android:background="@drawable/home_ry_item_bg"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/photo_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:background="@mipmap/touxiang"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/photo_img"
            app:layout_constraintTop_toTopOf="@id/photo_img" />

        <TextView
            android:id="@+id/text_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/points"
            android:visibility="gone"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@id/photo_img"
            app:layout_constraintTop_toBottomOf="@id/text_welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_label"
            app:layout_constraintTop_toBottomOf="@id/photo_img"
            app:layout_constraintLeft_toLeftOf="@id/photo_img"
            android:layout_marginTop="10dp"
            android:text="@string/label"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>