<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:background="@drawable/ic_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/login_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tittle"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/login_user_edt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <EditText
                android:id="@+id/login_user_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@id/login_password_edt"
                app:layout_constraintLeft_toRightOf="@id/login_user_text"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_tittle" />

            <EditText
                android:id="@+id/login_password_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberPassword"
                app:layout_constraintBottom_toTopOf="@id/login_regis_btn"
                app:layout_constraintLeft_toRightOf="@id/login_password_text"
                app:layout_constraintTop_toBottomOf="@id/login_user_edt" />


            <TextView
                android:id="@+id/login_regis_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_comming"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/login_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_password_edt" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login"
                android:background="@android:color/holo_red_light"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/login_user_text"
                app:layout_constraintRight_toRightOf="@id/login_user_edt"
                app:layout_constraintTop_toBottomOf="@id/login_regis_btn" />


            <TextView
                android:id="@+id/login_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                app:layout_constraintBottom_toTopOf="@id/login_password_edt"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="@id/login_user_edt"
                app:layout_constraintTop_toBottomOf="@id/login_tittle" />

            <TextView
                android:id="@+id/login_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@id/login_regis_btn"
                app:layout_constraintRight_toRightOf="@id/login_user_text"
                app:layout_constraintTop_toBottomOf="@id/login_user_edt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
