<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/userprofile_bg">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/up_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_shape"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <ImageView
                android:id="@+id/up_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/up_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/up_icon" />

            <TextView
                android:id="@+id/up_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="@id/up_username"
                app:layout_constraintTop_toBottomOf="@id/up_username" />


            <TextView
                android:id="@+id/up_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toRightOf="@id/up_nickname"
                app:layout_constraintRight_toLeftOf="@id/up_admin"
                app:layout_constraintTop_toTopOf="@id/up_nickname" />


            <TextView
                android:id="@+id/up_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                app:layout_constraintLeft_toRightOf="@id/up_email"
                app:layout_constraintRight_toLeftOf="@id/up_icon"
                app:layout_constraintTop_toTopOf="@id/up_nickname" />


            <TextView
                android:id="@+id/up_coinCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/up_coinCount_tittle"
                app:layout_constraintRight_toRightOf="@id/up_coinCount_tittle"
                app:layout_constraintTop_toBottomOf="@id/up_coinCount_tittle" />

            <TextView
                android:id="@+id/up_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/up_level_tittle"
                app:layout_constraintRight_toRightOf="@id/up_level_tittle"
                app:layout_constraintTop_toBottomOf="@id/up_coinCount_tittle" />


            <TextView
                android:id="@+id/up_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/up_rank_tittle"
                app:layout_constraintRight_toRightOf="@id/up_rank_tittle"
                app:layout_constraintTop_toBottomOf="@id/up_coinCount_tittle" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.1dp"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="@id/up_nickname"
                app:layout_constraintRight_toRightOf="@id/up_icon"
                app:layout_constraintTop_toBottomOf="@id/up_nickname" />


            <TextView
                android:id="@+id/up_coinCount_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/coincount"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/up_level_tittle"
                app:layout_constraintTop_toBottomOf="@id/up_nickname" />

            <TextView
                android:id="@+id/up_level_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coinlevel"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/up_coinCount_tittle"
                app:layout_constraintRight_toLeftOf="@id/up_rank_tittle"
                app:layout_constraintTop_toTopOf="@id/up_coinCount_tittle" />


            <TextView
                android:id="@+id/up_rank_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coinrank"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/up_level_tittle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/up_coinCount_tittle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/up_rank_list"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_shape"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/up_info"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/coin_list"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/coming_coin_list"
                android:text="@string/coming_coin_list"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/up_rank_custom"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_shape"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/up_rank_list"
            app:layout_constraintWidth_percent="0.9">

            <ImageView
                android:id="@+id/up_rank_custom_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:background="@mipmap/touxiang"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/coming_my_coin_list"
                app:layout_constraintTop_toBottomOf="@id/up_rank_custom_img"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@mipmap/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>